[package]
name = "z_ai"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "z_ai"
path = "src/main.rs"

[dependencies]
# Async & Networking
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio (Universal)
cpal = "0.17.1"
rodio = "0.22.1"
hound = "3.5"

# Utilities
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
anyhow = "1.0"
chrono = "0.4"
